--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "rollup-plugin-visualizer": "^5.9.2",
+    "typescript": "^5.3.3",
     "unplugin-vue-macros": "^2.9.1",
     "vite": "^5.2.0",
     "vite-plugin-cdn-import": "0.3.5",
