--- a/.github/workflows/deploy-gitee-pages.yml
+++ b/.github/workflows/deploy-gitee-pages.yml
@@ -57,7 +57,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
         with:
           source-repo: git@github.com:zyronon/douyin.git
-          destination-repo: git@gitee.com:skywang886/H5douyin.git
+          destination-repo: git@gitee.com:skywang886/h5douyin.git
 
       - name: Build Gitee Pages
         uses: yanglbme/gitee-pages-action@main
