--- a/.github/workflows/deploy-gitee-pages.yml
+++ b/.github/workflows/deploy-gitee-pages.yml
@@ -57,7 +57,7 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.GITEE_PRIVATE_KEY }}
         with:
           source-repo: git@github.com:zyronon/douyin.git
-          destination-repo: git@gitee.com:skywang886/H5douyin.git
+          destination-repo: git@gitee.com:skywang886/h5douyin.git
 
       - name: Build Gitee Pages
         uses: yanglbme/gitee-pages-action@main
@@ -67,6 +67,6 @@ jobs:
           # 注意在 Settings->Secrets 配置 GITEE_PASSWORD
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
           # 注意替换为你的 Gitee 仓库，仓库名严格区分大小写，请准确填写，否则会出错
-          gitee-repo: skywang886/H5douyin
+          gitee-repo: skywang886/h5douyin
           # 要部署的分支，#默认是 master，若是其他分支，则需要指定（指定的分支必须存在）
           branch: master
